[project]
name = "torf"
description = "Python 3 module for creating and parsing torrent files and magnet URIs"
readme = "README.rst"
license = {text = "GPL-3.0-or-later"}
authors = [
  { name="Random User", email="rndusr@posteo.de" },
]
keywords = ["bittorrent", "torrent", "magnet"]
dynamic = ["version"]  # Get version from PROJECT/__version__
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-httpserver",
    "pytest-mock",

    "tox",

    "coverage",
    "pytest-cov",

    "ruff",
    "flake8",
    "isort",
    "mypy",
]

[project.urls]
Repository = "https://github.com/rndusr/torf"
Documentation = "https://torf.readthedocs.io/"
"Bug Tracker" = "https://github.com/rndusr/torf/issues"
Changelog = "https://raw.githubusercontent.com/rndusr/torf/master/CHANGELOG"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["torf*"]

[tool.setuptools.dynamic]
version = {attr = "torf.__version__"}

[tool.mypy]
strict = true
pretty = true
exclude = [
    "torf/_reuse.py", # Not part of the public API
    "torf/_generate.py", # Not part of the public API
    "tests/",
    "docs/",
]
